roles/apps-setup/clair-setup/files/03-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: clair-postgres
  name: clair-postgres
  namespace: clair
spec:
  ports:
    - port: 5432
  selector:
    app: clair-postgres
