roles/apps-setup/clair-setup/files/07-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: clair-ingress
  namespace: clair
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - path: /clair0/?(.*)
          backend:
            serviceName: clair
            servicePort: clair-port0
        - path: /clair1/?(.*)
          backend:
            serviceName: clair
            servicePort: clair-port1
